Fix scrollbar color

--- a/plugins/ZipPreview/src/styles.css
+++ b/plugins/ZipPreview/src/styles.css
@@ -33,6 +33,7 @@
     transition: max-height 0.3s ease;
     color: var(--text-default);
     padding-left: 16px;
+    scrollbar-color: var(--scrollbar-thin-thumb) transparent;
 }
 
 .zp-zip-preview.expanded {
